# aptc

./: CMakeLists.txt  README.md
.circleci/: config.yml
CMake/: FindAptPkg.cmake  config.h.in
cmd/: CMakeLists.txt  aptc.cc  dpkgc.cc
dpkg/: CMakeLists.txt  preload.c
lib/: CMakeLists.txt  cmd.cc  cmd.h  env.cc  env.h  fs.cc  fs.h  init.cc  init.h  install.cc  install.h  log.cc  log.h  state.cc  state.h  update.h
test/integration/: fixture-repo.sh  test-command.sh
test/unit/: CMakeLists.txt  cmd_test.cc  fixture-config.cc  fixture-config.h  fixture-home.cc  fixture-home.h  fixture-tempdir.cc  fixture-tempdir.h  test-cmd.cc  test-init.cc  test-log.cc  test-state.cc
